--- a/templates/index.html
+++ b/templates/index.html
@@ -9,12 +9,39 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     
+    <!--style sheet-->
+    <link rel="stylesheet" href="static/css/style.css">
+
     <!--Plotly.js-->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <title>Stock Explorer</title>
+    <title>Team Money Penny</title>
 </head>
 <body>
+
+    <div class="wrapper">
+        <nav class="navbar navbar-dark" style="background-color: #3b3b3b;">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">
+                    <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
+                </a>
+            </div>
+        </nav>
+
+        <!--Div for the gif of Miss Money Penny-->
+        <div class="mp text-center">
+          <h1 class="mp_text">One Penny At A Time</h1>
+          <p class="mp_text_2">Let's Grow Your Wealth</p>
+        </div>
+
+        <footer class="footer">
+          <span class="bottom">
+             <!--reference source for the James Bond icon, must insert for free use of icon-->
+            <a href="https://icons8.com/icon/69460/james-bond">James Bond icon by Icons8</a>
+          </span>
+        </footer>
+      
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
