--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,12 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    
     <!--style sheet-->
     <link rel="stylesheet" href="static/css/style.css">
-
     <!--Plotly.js-->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-
+    <!--D3-->
+    <script src="https://d3js.org/d3.v6.min.js"></script>
     <title>Team Money Penny</title>
 </head>
 <body>
@@ -34,6 +33,26 @@
           <p class="mp_text_2">Let's Grow Your Wealth</p>
         </div>
 
+        <!-- Div for stocks table -->
+        <div>
+            <table class="stock-table">
+                <thead class="stock-table-head">
+                    <!-- table headers td in js-->
+                    <tr>
+                        <th>Qty</th>
+                        <th>Ticker</th>
+                        <th>Company Name</th>
+                        <th>Price</th>
+                        <th>Dividend</th>
+                        <th>Rate of Return</th>
+                    </tr>
+                </thead>
+                <tbody class="stock-table-body">
+                    <!-- table row/col in js -->
+                </tbody>
+            </table>
+        </div>
+
         <footer class="footer">
           <span class="bottom">
              <!--reference source for the James Bond icon, must insert for free use of icon-->
@@ -42,6 +61,7 @@
         </footer>
       
     </div>
-    <script src="app.js"></script>
+    <script src="../static/data/sampledata.json"></script>
+    <script src="../static/js/app.js"></script>
 </body>
 </html>
