--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
         </footer>
       
     </div>
-    <script src="../static/data/sampledata.json"></script>
+    <!-- <script src="../static/js/sampledata.json"></script> -->
     <script src="../static/js/app.js"></script>
 </body>
 </html>
