--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <!--style sheet-->
-    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+
     <!--Plotly.js-->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!--D3-->
@@ -24,6 +25,7 @@
                 <a class="navbar-brand" href="index.html">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
+                <button type="button" id="calculator" class="btn btn-secondary" href="../Calculator/index.html">Calculator</button>
             </div>
         </nav>
 
