--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,13 +10,19 @@
     margin: 0;
   }
 
+  h2{
+      font-size: medium;
+      text-align: left;
+      color: #f5f5f1;
+  }
+
 /* The wrapper contains all of the page's content besides the footer, which is pushed to the bottom of the page */
 .wrapper {
     position: relative;
     min-height: 100%;
     padding-bottom: 130px;
     overflow: auto;
-    background-color: #3b3b3b;
+    background-color: #070505;
 }
 
 /* The footer is positioned at the bottom of the page */
@@ -26,7 +32,13 @@
     bottom: 0;
     left: 0;
     min-height: 100px;
-    background: #3b3b3b;
+    background: #080a9c;
+  }
+/* style code for footer text */
+  .footer-text {
+    margin-top: 40%;
+    padding-top: 20px;
+    color: #f5f5f1;
   }
 
 /* The code styles the text at the bottom of the footer */
@@ -40,22 +52,22 @@
   } */
 
   .navbar {
-    padding: 5px;
+    padding: 15px;
     margin: 0;
   }
 
-  /* This CSS styles the ufo icon in the navbar */
+  /* This CSS styles the bond icon in the navbar */
 .nav-bond {
     position: absolute;
     bottom: 5px;
     left: 10px;
-    width: 35px;
+    width: 65px;
   }
 
-  /* The styles for the alien gif */
+/* The styles for the MoneyPenny gif */
 .mp {
     position: relative;
-    height: 650px;
+    height: 850px;
     padding: 10px; 
     margin: 0%;
     background: black url("../images/money_penny.gif");
@@ -64,13 +76,54 @@
     background-size: 100% 100%;
   }
   
-  /* Styles text for alien gif*/
-  .mp_text {
+/* Styles text for MoneyPenny gif*/
+  .mp-text {
     margin-top: 20%;
     color: #f5f5f1;
   }
-  
-  .mp_text_2 {
+
+/* Styles text for summary heading*/
+  .sh-text {
     margin-top: 0%;
+    text-align: center;
+    color: #e2ba05;
+  }
+  
+  .sh-text1{
+    text-align: center;
+    color: #e2ba05;
+  }
+
+/* Styles text for summary*/
+  .summary {
+    margin-top: 5%;
+    padding: 30px; 
     color: #f5f5f1;
   }
+
+  .summary-text1 {
+    margin-left: 30px;
+    margin-right: 40px;
+    /* padding: 65px;  */
+    color: #f5f5f1;
+  }
+
+  /* style for the creators section */
+  .creators {
+    margin-top: 10%;
+    padding: 30px; 
+    color: #f5f5f1;
+  }
+
+  .agent-name{
+      text-align: center;
+      font-size: large;
+      color: blue;
+
+  }
+  .part{
+    text-align: center;
+    font-size: small;
+    color: whitesmoke;
+
+}
