--- a/templates/index.html
+++ b/templates/index.html
@@ -35,26 +35,6 @@
           <p class="mp_text_2">Let's Grow Your Wealth</p>
         </div>
 
-        <!-- Div for stocks table -->
-        <div>
-            <table class="stock-table">
-                <thead class="stock-table-head">
-                    <!-- table headers td in js-->
-                    <tr>
-                        <th>Qty</th>
-                        <th>Ticker</th>
-                        <th>Company Name</th>
-                        <th>Price</th>
-                        <th>Dividend</th>
-                        <th>Rate of Return</th>
-                    </tr>
-                </thead>
-                <tbody class="stock-table-body">
-                    <!-- table row/col in js -->
-                </tbody>
-            </table>
-        </div>
-
         <footer class="footer">
           <span class="bottom">
              <!--reference source for the James Bond icon, must insert for free use of icon-->
@@ -63,7 +43,7 @@
         </footer>
       
     </div>
-    <!-- <script src="../static/js/sampledata.json"></script> -->
+    <script src="../static/js/sampledata.json"></script>
     <script src="../static/js/app.js"></script>
 </body>
 </html>
