--- a/templates/index.html
+++ b/templates/index.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 
-    <div class="wrapper">
+    <div class="wrapper" style="background-color: black;">
       <!-- Navigation Bar -->
         <nav class="navbar navbar-dark" style="background-color: black;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
-                <button type="button" id="calculator" class="btn btn-secondary">
+                <button type="button" id="calculator" class="btn-main">
                     <a href="../Calculator/index.html">Calculator</a> 
                 </button>
             </div>
@@ -39,8 +39,6 @@
           </div>
         </div>
 
-<<<<<<< HEAD
-=======
         <!-- Container for the site information section -->
         <div class="container">
             <div class="row">
@@ -62,7 +60,7 @@
                     <p>
                       To do so, we've built a tool to help you explore stock information for those found in the Russell 1000 Index. Russell describes the index as:
                     </p>
-                    <p class="summary-text2">
+                    <p class="summary-text2" style="margin-left: 20px; margin-right: 50px;">
                       The Russell 1000® Index measures the performance of the large-cap segment of the US equity universe. It is a subset of the Russell 3000® Index and includes approximately 1,000 of the largest securities based on a combination of their market cap and current index membership. The Russell 1000® represents approximately 92% of the US market. The Russell 1000® Index is constructed to provide a comprehensive and unbiased barometer for the large-cap segment and is completely reconstituted annually to ensure new and growing equities are included.
                     </p>
                     <p>
@@ -73,7 +71,7 @@
               </div>
               <!-- Div for Meet the Creators-->
               <div class="col-md-4">
-                <div class="creators">
+                <div class="creators" id="team-box">
                   <h3 class="creator-title">Our MI6 Team</h3>
                   <hr>
                   <p class="agent-name">M</p>
@@ -85,9 +83,7 @@
                   <p class="agent-name">Miss Money Penny</p>
                   <p class="part">The HTML and CSS admin.</p>
                   <p class="part">Part played by: Jasmine</p>
-
                 </div>
-
               </div>
             </div>
         </div>
@@ -115,25 +111,24 @@
 
         </div>
         <!-- Div for the Footer -->
->>>>>>> e40deb063f6fdbff2fd12685308e28c2b4be1fe4
         <footer class="footer">
           <span class="bottom">
             <h2>Sources:</h2>
             <ul class="source-list">
+              <!-- data source for our stock data -->
               <li><a class="footer-text" href="https://polygon.io">polygon.io</a></li>
               <!--reference source for the James Bond icon, must insert for free use of icon-->
               <li><a class="footer-text" href="https://icons8.com/icon/69460/james-bond">James Bond icon by Icons8</a></li>
+              <!-- source for our Russell 1000  -->
+              <li><a class="footer-text" href="https://research.ftserussell.com/Analytics/FactSheets/temp/3f3741fa-5be6-45d9-83d3-e02cd5d7331a.pdf">Russell 1000</a></li>
             </ul>
              
           </span>
         </footer>
       
     </div>
-<<<<<<< HEAD
-    <script src="../static/js/sampledata.json"></script>
-=======
      <script src="../static/js/sampledata.json"></script>
->>>>>>> e40deb063f6fdbff2fd12685308e28c2b4be1fe4
     <script src="../static/js/app.js"></script>
+   
 </body>
 </html>
