updated html with animated scroll line

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,6 +36,13 @@
         <div class="banner">
           <div class="mp text-center">
               <p class="mp-text">Scroll</p>
+              <!-- Use d3 transition for the animated scroll line -->
+              <div class="svg-area">
+                <svg width="960px" height="400px">
+                  <rect class="slide-top" x="480" y="0" stroke="white" 
+                  width=5px height=50px fill="white"/>
+                </svg>
+              </div>
           </div>
         </div>
 
