--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,13 @@
       <!-- Navigation Bar -->
         <nav class="navbar navbar-dark" style="background-color: black;">
             <div class="container-fluid">
+                <!-- Icon image links back to main page -->
                 <a class="navbar-brand" href="index.html">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
+                <!-- Button links to the calculator page -->
                 <button type="button" id="calculator" class="btn-main">
-                    <a href="../Calculator/index.html">Calculator</a> 
+                    <a href="calculator.html">Calculator</a> 
                 </button>
             </div>
         </nav>
@@ -36,11 +38,11 @@
         <div class="banner">
           <div class="mp text-center">
               <p class="mp-text">Scroll</p>
-              <!-- Use d3 transition for the animated scroll line -->
+              <!-- Use CSS to animate scroll line -->
               <div class="svg-area">
                 <svg width="960px" height="400px">
                   <rect class="slide-top" x="480" y="0" stroke="white" 
-                  width=5px height=50px fill="white"/>
+                  width=5px height=75px fill="white"/>
                 </svg>
               </div>
           </div>
