--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 
     <div class="wrapper" style="background-color: black;">
       <!-- Navigation Bar -->
-        <nav class="navbar navbar-dark" style="background-color: black;">
+        <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
             <div class="container-fluid">
                 <!-- Icon image links back to main page -->
                 <a class="navbar-brand" href="index.html">
@@ -42,7 +42,7 @@
               <div class="svg-area">
                 <svg width="960px" height="400px">
                   <rect class="slide-top" x="480" y="0" stroke="white" 
-                  width=5px height=75px fill="white"/>
+                  width=2px height=75px fill="white"/>
                 </svg>
               </div>
           </div>
@@ -115,24 +115,31 @@
                 </div>
               </div>
             </div>
-            
           </div>
 
         </div>
         <!-- Div for the Footer -->
         <footer class="footer">
-          <span class="bottom">
-            <h2>Sources:</h2>
-            <ul class="source-list">
-              <!-- data source for our stock data -->
-              <li><a class="footer-text" href="https://polygon.io">polygon.io</a></li>
-              <!--reference source for the James Bond icon, must insert for free use of icon-->
-              <li><a class="footer-text" href="https://icons8.com/icon/69460/james-bond">James Bond icon by Icons8</a></li>
-              <!-- source for our Russell 1000  -->
-              <li><a class="footer-text" href="https://research.ftserussell.com/Analytics/FactSheets/temp/3f3741fa-5be6-45d9-83d3-e02cd5d7331a.pdf">Russell 1000</a></li>
-            </ul>
-             
-          </span>
+          <div class="container" style="padding-top: 20px;">
+            <div class="row">
+                <div class="col-md-6">
+                    <span class="bottom">
+                        <h2>Sources:</h2>
+                        <ul class="source-list">
+                            <!-- data source for our stock data -->
+                            <li><a class="footer-text" href="https://polygon.io">polygon.io</a></li>
+                            <!--reference source for the James Bond icon, must insert for free use of icon-->
+                            <li><a class="footer-text" href="https://icons8.com/icon/69460/james-bond">James Bond icon by Icons8</a></li>
+                            <!-- source for our Russell 1000  -->
+                            <li><a class="footer-text" href="https://research.ftserussell.com/Analytics/FactSheets/temp/3f3741fa-5be6-45d9-83d3-e02cd5d7331a.pdf">Russell 1000</a></li>
+                        </ul>
+                    </span>
+                </div>
+                <div class="col-md-6" style="text-align: right; color: white; padding-top: 20px;">
+                    <p>Data refreshes every 8 hours</p>
+                </div>
+            </div>
+        </div>
         </footer>
       
     </div>
