updated html and new data folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
               <!-- Use CSS to animate scroll line -->
               <div class="svg-area">
                 <svg width="960px" height="400px">
-                  <rect class="slide-top" x="480" y="0" stroke="white" 
+                  <rect class="slide-bottom" x="480" y="0" stroke="white" 
                   width=2px height=75px fill="white"/>
                 </svg>
               </div>
