--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -33,13 +33,12 @@
         </nav>
 
         <!-- Input, Buttons and Gauge-->
-<<<<<<< Updated upstream
         <div class="container">
             <div class="input-area">
                 <div class="row">
                     <div class="col-md-6" style="padding-top: 55px;">
                         <label for="spend-amount">I want to spend: $</label>
-                        <input type="number" id="spend-amount" name="spend-amount" min="0.00" max="1000000.00" value="0.00" step=".50"  onchange="dollarsNotInt(this)">
+                        <input type="number" id="spend-amount" name="spend-amount" min="0.00" max="1000000.00" value="0.00" step=".50">
                         <div class="buttons">
                             <button type="button" id="get-stocks" name="get-stocks" class="get-button">Get Stocks</button>
                             <button type="button" id="reset" name="reset" class="reset-button">Reset Table</button>
@@ -47,16 +46,6 @@
                     </div>
                      <!-- Div for guage -->
                     <div class="col-md-6" id="gauge">
-=======
-        <div class="container" style="padding-top: 20px;">
-            <div class="row">
-                <div class="col-md-6">
-                    <label for="spend-amount">I want to spend: $</label>
-                    <input type="number" id="spend-amount" name="spend-amount" min="0.00" max="1000000.00" value="0.00" step=".50">
-                    <div class="buttons">
-                        <button type="button" id="get-stocks" name="get-stocks" class="get-button">Get Stocks</button>
-                        <button type="button" id="reset" name="reset" class="reset-button">Reset Table</button>
->>>>>>> Stashed changes
                     </div>
                 </div>
             </div>
@@ -75,7 +64,7 @@
                                 <th>Company Name</th>
                                 <th>Price</th>
                                 <th>Dividend</th>
-                                <th>Rate of Return</th>
+                                <th>ROI (%)</th>
                             </tr>
                         </thead>
                         <tbody class="stock-table-body">
@@ -116,7 +105,7 @@
           </footer>
     </div>
     <!-- <script src="app.js"></script> -->
-    <script src="../static/js/sampledata.json"></script>
+    <script src="../static/data/openClose.json"></script>
     <script src="../static/js/app.js"></script>
     
 </body>
