--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -14,7 +14,19 @@
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <!--D3-->
     <script src="https://d3js.org/d3.v6.min.js"></script>
-
+    <style>
+        /* Chrome, Safari, Edge, Opera */
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+        /* Firefox */
+        input[type=number] 
+        {
+          -moz-appearance: textfield;
+        }
+        </style>
     <title>Team Money Penny</title>
 </head>
 <body>
