--- a/templates/index.html
+++ b/templates/index.html
@@ -127,7 +127,7 @@
         <!-- Div for JQuery exploding text -->
         <div  style="padding:100px;text-align: center;background-color: darkgrey;">
           <button type="button" id="explode-button" class="btn-main">
-            <!-- <span>Accept Mission</span> -->
+            <span>Accept Mission</span>
           </button>
           <!-- <span class="target" id="hide" style="color: yellow;font-size: xx-large;">Accept Mission</span> -->
           <!-- <span onclick="fx(this)">Accept Mission</span> -->
