updated html and css

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -209,9 +209,9 @@
   font-size: xx-large;
   background-color: lightgrey;
 } */ 
-/* 
+
 .target {
   width: 500px;
   height: 100px; 
   color: yellow;
-}  */
+} 
