--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -33,7 +33,7 @@
 
     <div class="wrapper">
         <!-- Navigation Bar -->
-        <nav class="navbar navbar-dark" style="background-color:black;">
+        <nav class="navbar fixed-top navbar-dark" style="background-color:black;">
             <div class="container-fluid">
                 <!-- Icon image links back to main page -->
                 <a class="navbar-brand" href="index.html">
@@ -44,12 +44,15 @@
                         <div style="padding: 5px;">
                             <!-- Button links to the calculator page -->
                             <button type="button" id="calculator" class="btn-main">
-                            <a href="calculator.html">Calculator</a> 
+                                <a href="calculator.html">Calculator</a>
+                            </button>
+                            <!-- <a href="calculator.html">Calculator</a>  -->
                         </div>
                         <div style="padding: 5px;" class="toggle-button">
                             <!-- Button to toggle dark/light mode -->
                             <button type="button" id="dark-mode" class="btn btn-light" onclick="myFunction()">
-                            <a >Toggle Dark Mode</a> 
+                                <a >Toggle Dark Mode</a> 
+                            </button>
                         </div> 
                     </div>
                     
@@ -70,7 +73,7 @@
                         </div>
                     </div>
                      <!-- Div for guage -->
-                    <div class="col-md-6" id="gauge">
+                    <div class="col-md-6" id="gauge" style="padding: 10px;">
                     </div>
                 </div>
             </div>
@@ -81,7 +84,7 @@
             <div class="row">
                  <!-- stock table -->
                 <div class="col-md-7">
-                    <table class="stock-table table table-striped table-hover">
+                    <table class="stock-table table table-striped table-hover" >
                         <thead class="stock-table-head">
                             <tr>
                                 <th>Qty</th>
@@ -99,7 +102,7 @@
                 </div>
             <!-- horizontal bar chart -->
                 
-                <div id="bar-chart" class="col-md-5">
+                <div id="bar-chart" class="col-md-5" style="padding: 5px;">
 
                 </div>
             </div>
