--- a/templates/index.html
+++ b/templates/index.html
@@ -33,10 +33,23 @@
                 <a class="navbar-brand" href="index.html">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
-                <!-- Button links to the calculator page -->
-                <button type="button" id="calculator" class="btn-main">
-                    <a href="calculator.html">Calculator</a>  
-                </button>
+                <div class="buttons-area">
+                  <div class="row">
+                      <div style="padding: 5px;">
+                          <!-- Button links to the calculator page -->
+                          <button type="button" id="calculator" class="btn-main">
+                          <a href="calculator.html">Calculator</a>
+                         </button>
+                      </div>
+                      <div style="padding: 5px;" class="toggle-button">
+                          <!-- Button to toggle dark/light mode -->
+                          <button type="button" id="dark-mode" class="btn btn-light" onclick="myFunction()">
+                          <a >In Dark Mode</a>
+                        </button> 
+                      </div> 
+                  </div>
+                  
+              </div>
             </div>
         </nav>
 
