--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -38,7 +38,7 @@
         <nav class="navbar navbar-dark" style="background-color:black;">
             <div class="container-fluid">
                 <!-- Icon image links back to main page -->
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
                 <div class="buttons-area">
