--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         <nav class="navbar fixed-top navbar-dark" style="background-color: black;">
             <div class="container-fluid">
                 <!-- Icon image links back to main page -->
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="/">
                     <img class="nav-bond" src="https://img.icons8.com/nolan/64/james-bond.png" href="index.html"/>
                 </a>
                 <div class="buttons-area">
